--- a/gb/18/9/24/n10738242.md
+++ b/gb/18/9/24/n10738242.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nsrmna346/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nsrmna346/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nsrmna346/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nsrmna346/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nsrmna346/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nsrmna346/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nsrmna346/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nsrmna346/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nsrmna346/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nsrmna346/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nsrmna346/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nsrmna346/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nsrmna346/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nsrmna346/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nsrmna346/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nsrmna346/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/nsrmna346/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nsrmna346/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/nsrmna346/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nsrmna346/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nsrmna346/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nsrmna346/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nsrmna346/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nsrmna346/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>打击枪支暴力 警方缴枪上百支 逮捕近250人</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2018年09月25日讯】（大纪元记者苏明明多伦多编译报导）多伦多警局总警长<ahref="https://github.com/nsrmna346/djy/blob/master/gb/tag/%E6%A1%91%E5%BE%B7%E6%96%AF.md#1">桑德斯</a>（Mark Saunders）周一（9月24日）称，为期8周的打击枪支暴力计划已经结束，<ahref="https://github.com/nsrmna346/djy/blob/master/gb/tag/%E8%AD%A6%E6%96%B9.md#1">警方</a>缴获136支枪，逮捕了247人。</p>
+<p>【大纪元2018年09月25日讯】（大纪元记者苏明明多伦多编译报导）多伦多警局总警长<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%A1%91%E5%BE%B7%E6%96%AF.md#1">桑德斯</a>（Mark Saunders）周一（9月24日）称，为期8周的打击枪支暴力计划已经结束，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%AD%A6%E6%96%B9.md#1">警方</a>缴获136支枪，逮捕了247人。</p>
 <p>今年到目前为止，多伦多已发生超过300宗枪案，而2017年全年共有285宗。2018年，多市已发生79宗凶杀案，其中40宗为致命枪案。</p>
-<p>据CP24报导，总警长<ahref="https://github.com/nsrmna346/djy/blob/master/gb/tag/%E6%A1%91%E5%BE%B7%E6%96%AF.md#1">桑德斯</a>说，8周内，<ahref="https://github.com/nsrmna346/djy/blob/master/gb/tag/%E8%AD%A6%E6%96%B9.md#1">警方</a>在关键时间增派更多警力，取得了比较好的效果。警方逮捕了247名与枪支有关的嫌犯，缴获136支枪；还持司法令缴获19支枪。</p>
+<p>据CP24报导，总警长<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%A1%91%E5%BE%B7%E6%96%AF.md#1">桑德斯</a>说，8周内，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%AD%A6%E6%96%B9.md#1">警方</a>在关键时间增派更多警力，取得了比较好的效果。警方逮捕了247名与枪支有关的嫌犯，缴获136支枪；还持司法令缴获19支枪。</p>
 <p>警方于7月20日开始执行打击枪支暴力计划，夜间在市内枪支暴力最多的地区增派200名一线警员。桑德斯说，8周计划已经结束，下一阶段仍会继续行动，继续遏制枪支暴力。</p>
 <p>责任编辑：文芳</p>
 
@@ -15,48 +15,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/nsrmna346/djy/blob/master/gb/18/7/23/n10584277.md#1">多伦多希腊城重大枪案 警方证实：3死12伤</a></li>
-<li><a href="https://github.com/nsrmna346/djy/blob/master/gb/18/7/24/n10586876.md#1">加拿大犯罪份子的枪是从哪里来的？</a></li>
-<li><a href="https://github.com/nsrmna346/djy/blob/master/gb/18/8/19/n10650853.md#1">新布省枪案 遇难警员丧礼 民众送行</a></li>
-<li><a href="https://github.com/nsrmna346/djy/blob/master/gb/18/8/22/n10658856.md#1">枪声不断 希腊城和约克再发枪案 二男丧生</a></li>
-<li><a href="https://github.com/nsrmna346/djy/blob/master/gb/18/9/23/n10735569.md#1">法庭文件：希腊城案枪手行凶时很残忍</a></li>
-<li><a href="https://github.com/nsrmna346/djy/blob/master/gb/20/7/20/n12268359.md#1">加拿大各省最新疫情数据</a></li>
-<li><a href="https://github.com/nsrmna346/djy/blob/master/gb/20/8/18/n12338418.md#1">多伦多警方打击性贩运 指控300人2500项罪</a></li>
-<li><a href="https://github.com/nsrmna346/djy/blob/master/gb/20/8/17/n12338253.md#1">安省周一新增99人染疫 无人死亡</a></li>
-<li><a href="https://github.com/nsrmna346/djy/blob/master/gb/20/8/17/n12338192.md#1">省府望学生每天至少上课300分钟</a></li>
-<li><a href="https://github.com/nsrmna346/djy/blob/master/gb/20/8/17/n12337828.md#1">孟晚舟引渡案今天开审 最早明年4月结案</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/7/23/n10584277.md#1">多伦多希腊城重大枪案 警方证实：3死12伤</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/7/24/n10586876.md#1">加拿大犯罪份子的枪是从哪里来的？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/19/n10650853.md#1">新布省枪案 遇难警员丧礼 民众送行</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/22/n10658856.md#1">枪声不断 希腊城和约克再发枪案 二男丧生</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/9/23/n10735569.md#1">法庭文件：希腊城案枪手行凶时很残忍</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13753004.md#1">GTA五月房产交易下降39%?房价涨近10%?</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13753015.md#1">暴风雨两周后 安省民宅维修积压</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752949.md#1">多伦多60%公共饮水喷泉未启动  居民不满</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752945.md#1">安省大选 保守党获得席位逼近历史纪录</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752942.md#1">安省公园免费玩 多伦多图书馆出借通行证</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/30/n10752312.md#1" target="_blank">谭松：一个被摧折了“阳根”的老地主</a></li><li><a href="https://github.com/nsrmna346/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/24/n11405877.md#1" target="_blank">组图：反迫害20年 澳纽法轮功呼唤正义良知</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/12/n11038882.md#1" target="_blank">严家伟：我亲历的《星星诗刊》大冤案</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/28/n8146809.md#1" target="_blank">陈汝莲：因祸得福 我在看守所遇到法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/6/n12311908.md#1">僧人神游极乐世界 带回醒世奇闻</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/6/n12310782.md#1">顺天意民心退位让国 隆裕太后获盛赞</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/8/n12316046.md#1">中国古代独步天下的天文科技成就</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/4/n12306294.md#1">“荷花定律”古代版：“行百里者半九十”</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/6/7/n12168858.md#1">“势败休云贵  家亡莫论亲”  板儿递给巧姐的那个佛手</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/15/n12334172.md#1">【直播】美国华人吁中国城撤下中共五星旗</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/16/n12335697.md#1">【薇羽看世间】以阿全面建交 美国剑指中共</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/17/n12338272.md#1">【新闻看点】北戴河会超长结束 习难脱7大困境</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/15/n12332658.md#1">为何美F-35战机“野兽模式”对敌方很致命</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/16/n12335764.md#1">美公布对台军售合约 超级巨炮或部署台湾</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/14/n12332073.md#1">【独家】中石油密件曝海外党组织转地下</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/16/n12335475.md#1">李若彤首度公布真实年龄 冻龄外表震惊粉丝</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/15/n12333541.md#1">罗霈颖告别式众星友送行 与父长眠桃园大溪</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/16/n12335889.md#1">分享十岁女儿扎染技能 吴尊全家穿亲子装逛街</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/16/n12335654.md#1">为戏增肥又迅速减重 冯绍峰怪嗔遭选择性偷拍</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/15/n12332419.md#1">《超能计划》影评：获得超能力 未必是人类之福</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/16/n12334408.md#1">全球首例因疫情“亡国” 南半球小国宣布解散</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/15/n12333887.md#1">大豆降坏胆固醇 预防动脉硬化 7种豆制品可常吃</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/16/n12335214.md#1">为护小主人 美国牧羊犬与歹徒搏斗身中三枪</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/15/n12333334.md#1">英女童天生脏器外露 肚上长“球” 现已2岁</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/14/n12331937.md#1">【直播回放】肌力不足易胖老得快？4周减肥增肌、甩掉酸痛</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nsrmna346/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nsrmna346/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/9/24/n10738242.htm">打击枪支暴力 警方缴枪上百支 逮捕近250人</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/9/24/n10738242.htm">打击枪支暴力 警方缴枪上百支 逮捕近250人</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/nsrmna346/djy/blob/master/gb/18/9/24/n10738242.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nsrmna346/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nsrmna346/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nsrmna346/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nsrmna346/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsrmna346/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/18/9/24/n10738242.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
